added styling and markup for cart dropdown

--- a/index.html
+++ b/index.html
@@ -51,11 +51,17 @@
           </ul>
         </nav>
         <div class="header__container-user">
-          <img
-            class="cart-logo"
-            alt="cart logo with cart image "
-            src="./images/icon-cart.svg"
-          />
+          <div class="cart-container active">
+            <h3 class="cart-heading">Cart</h3>
+            <div class="cart-desc">your cart is empty</div>
+          </div>
+          <button class="btn btn-cart">
+            <img
+              class="cart-logo"
+              alt="cart logo with cart image "
+              src="./images/icon-cart.svg"
+            />
+          </button>
           <img
             class="avatar-img"
             alt="snearkers company logo "
