completed tablet and moblie caroused

--- a/index.html
+++ b/index.html
@@ -80,28 +80,28 @@
             </button>
           </div>
           <div class="thumbnail-container">
-            <button class="thumbnail-btn active">
+            <button class="thumbnail-btn active" data-pos="0">
               <img
                 class="thumbnail-img"
                 alt="sneaker thumbnail-1"
                 src="./images/image-product-1-thumbnail.jpg"
               />
             </button>
-            <button class="thumbnail-btn">
+            <button class="thumbnail-btn" data-pos="1">
               <img
                 class="thumbnail-img"
                 alt="sneaker thumbnail-2"
                 src="./images/image-product-2-thumbnail.jpg"
               />
             </button>
-            <button class="thumbnail-btn">
+            <button class="thumbnail-btn" data-pos="2">
               <img
                 class="thumbnail-img"
                 alt="sneaker thumbnail-3"
                 src="./images/image-product-3-thumbnail.jpg"
               />
             </button>
-            <button class="thumbnail-btn">
+            <button class="thumbnail-btn" data-pos="3">
               <img
                 class="thumbnail-img"
                 alt="sneaker thumbnail-4"
