--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <div class="cart-desc">Your cart is empty</div>
           </div>
           <button class="btn btn-cart">
+            <p class="cart-quantity">0</p>
             <img
               class="cart-logo"
               alt="cart logo with cart image "
