--- a/index.html
+++ b/index.html
@@ -74,10 +74,36 @@
         <div class="main__container-imgs">
           <div class="main-img-container">
             <button class="main-img-btn btn-prev" data-type="prev">
-              <img src="./images/icon-previous.svg" alt="prev logo" />
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="icon-arrow"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M15.75 19.5 8.25 12l7.5-7.5"
+                />
+              </svg>
             </button>
             <button class="main-img-btn btn-next" data-type="next">
-              <img src="./images/icon-next.svg" alt="prev logo" />
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="icon-arrow"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m8.25 4.5 7.5 7.5-7.5 7.5"
+                />
+              </svg>
             </button>
           </div>
           <div class="thumbnail-container">
@@ -155,6 +181,94 @@
           </div>
         </div>
       </main>
+      <div class="overlay">
+        <div class="overlay-main">
+          <button class="btn close-btn">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="icon-close"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M6 18 18 6M6 6l12 12"
+              />
+            </svg>
+          </button>
+          <div class="overlay-body">
+            <div class="main__container-imgs">
+              <div class="main-img-container">
+                <button class="main-img-btn btn-prev" data-type="prev">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="icon-arrow"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M15.75 19.5 8.25 12l7.5-7.5"
+                    />
+                  </svg>
+                </button>
+                <button class="main-img-btn btn-next" data-type="next">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="icon-arrow"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="m8.25 4.5 7.5 7.5-7.5 7.5"
+                    />
+                  </svg>
+                </button>
+              </div>
+              <div class="thumbnail-container">
+                <button class="thumbnail-btn active" data-pos="0">
+                  <img
+                    class="thumbnail-img"
+                    alt="sneaker thumbnail-1"
+                    src="./images/image-product-1-thumbnail.jpg"
+                  />
+                </button>
+                <button class="thumbnail-btn" data-pos="1">
+                  <img
+                    class="thumbnail-img"
+                    alt="sneaker thumbnail-2"
+                    src="./images/image-product-2-thumbnail.jpg"
+                  />
+                </button>
+                <button class="thumbnail-btn" data-pos="2">
+                  <img
+                    class="thumbnail-img"
+                    alt="sneaker thumbnail-3"
+                    src="./images/image-product-3-thumbnail.jpg"
+                  />
+                </button>
+                <button class="thumbnail-btn" data-pos="3">
+                  <img
+                    class="thumbnail-img"
+                    alt="sneaker thumbnail-4"
+                    src="./images/image-product-4-thumbnail.jpg"
+                  />
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
