minor refactoring for better accessiblity

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <h3 class="cart-heading">Cart</h3>
             <div class="cart-desc">Your cart is empty</div>
           </div>
-          <button class="btn btn-cart">
-            <p class="cart-quantity">0</p>
+          <button class="btn btn-cart" type="button">
+            <span class="cart-quantity">0</span>
             <img
               class="cart-logo"
               alt="cart logo with cart image "
@@ -73,7 +73,11 @@
       <main class="main-section">
         <div class="main__container-imgs">
           <div class="main-img-container">
-            <button class="main-img-btn btn-prev" data-type="prev">
+            <button
+              class="main-img-btn btn-prev"
+              data-type="prev"
+              type="button"
+            >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
@@ -89,7 +93,11 @@
                 />
               </svg>
             </button>
-            <button class="main-img-btn btn-next" data-type="next">
+            <button
+              class="main-img-btn btn-next"
+              data-type="next"
+              type="button"
+            >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
@@ -107,28 +115,28 @@
             </button>
           </div>
           <div class="thumbnail-container">
-            <button class="thumbnail-btn active" data-pos="0">
+            <button class="thumbnail-btn active" data-pos="0" type="button">
               <img
                 class="thumbnail-img"
                 alt="sneaker thumbnail-1"
                 src="./images/image-product-1-thumbnail.jpg"
               />
             </button>
-            <button class="thumbnail-btn" data-pos="1">
+            <button class="thumbnail-btn" data-pos="1" type="button">
               <img
                 class="thumbnail-img"
                 alt="sneaker thumbnail-2"
                 src="./images/image-product-2-thumbnail.jpg"
               />
             </button>
-            <button class="thumbnail-btn" data-pos="2">
+            <button class="thumbnail-btn" data-pos="2" type="button">
               <img
                 class="thumbnail-img"
                 alt="sneaker thumbnail-3"
                 src="./images/image-product-3-thumbnail.jpg"
               />
             </button>
-            <button class="thumbnail-btn" data-pos="3">
+            <button class="thumbnail-btn" data-pos="3" type="button">
               <img
                 class="thumbnail-img"
                 alt="sneaker thumbnail-4"
@@ -154,7 +162,7 @@
           </div>
           <div class="container--btns">
             <div class="quantity-btns">
-              <button class="btn btn-quantity" data-type="dec">
+              <button class="btn btn-quantity" data-type="dec" type="button">
                 <img
                   src="./images/icon-minus.svg"
                   class="quantity-icon"
@@ -162,7 +170,7 @@
                 />
               </button>
               <span class="quantity">0</span>
-              <button class="btn btn-quantity" data-type="inc">
+              <button class="btn btn-quantity" data-type="inc" type="button">
                 <img
                   src="./images/icon-plus.svg"
                   class="quantity-icon"
@@ -170,7 +178,7 @@
                 />
               </button>
             </div>
-            <button class="btn-primary btn-add-cart">
+            <button class="btn-primary btn-add-cart" type="button">
               <img
                 class="btn-logo"
                 alt="cart logo"
@@ -183,7 +191,7 @@
       </main>
       <div class="overlay">
         <div class="overlay-main">
-          <button class="btn close-btn">
+          <button class="btn close-btn" type="button">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
@@ -202,7 +210,11 @@
           <div class="overlay-body">
             <div class="main__container-imgs">
               <div class="main-img-container">
-                <button class="main-img-btn btn-prev" data-type="prev">
+                <button
+                  class="main-img-btn btn-prev"
+                  data-type="prev"
+                  type="button"
+                >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     fill="none"
@@ -218,7 +230,11 @@
                     />
                   </svg>
                 </button>
-                <button class="main-img-btn btn-next" data-type="next">
+                <button
+                  class="main-img-btn btn-next"
+                  data-type="next"
+                  type="button"
+                >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     fill="none"
@@ -236,28 +252,28 @@
                 </button>
               </div>
               <div class="thumbnail-container">
-                <button class="thumbnail-btn active" data-pos="0">
+                <button class="thumbnail-btn active" data-pos="0" type="button">
                   <img
                     class="thumbnail-img"
                     alt="sneaker thumbnail-1"
                     src="./images/image-product-1-thumbnail.jpg"
                   />
                 </button>
-                <button class="thumbnail-btn" data-pos="1">
+                <button class="thumbnail-btn" data-pos="1" type="button">
                   <img
                     class="thumbnail-img"
                     alt="sneaker thumbnail-2"
                     src="./images/image-product-2-thumbnail.jpg"
                   />
                 </button>
-                <button class="thumbnail-btn" data-pos="2">
+                <button class="thumbnail-btn" data-pos="2" type="button">
                   <img
                     class="thumbnail-img"
                     alt="sneaker thumbnail-3"
                     src="./images/image-product-3-thumbnail.jpg"
                   />
                 </button>
-                <button class="thumbnail-btn" data-pos="3">
+                <button class="thumbnail-btn" data-pos="3" type="button">
                   <img
                     class="thumbnail-img"
                     alt="sneaker thumbnail-4"
